Fix Body Count not showing on Safari
closes #573

--- a/web/static/css/partials/_booking.scss
+++ b/web/static/css/partials/_booking.scss
@@ -60,32 +60,6 @@
       height: 38px;
     }
   }
-  .body-count {
-    .fa {
-      color: $primary-color;
-      &:hover {
-        color: $secondary-color;
-      }
-      &:before {
-        font-size: 46px;
-        margin-top: -3px;
-        display: inline-block;
-        font-weight: 100;
-        cursor: pointer;
-      }
-    }
-    .input-group-field {
-      padding-left: rem-calc(16);
-      max-width: rem-calc(46);
-      min-width: rem-calc(46);
-      margin: 0 1rem;
-    }
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-    }
-  }
   .book-total,
   .book-total-label {
     width: 100%;
@@ -130,14 +104,6 @@
       cursor: pointer;
     }
   }
-  .input-group-button {
-    width: auto;
-  }
-  .input-group-field {
-    padding-left: rem-calc(16);
-    width: rem-calc(46);
-    margin: 0 1rem;
-  }
   input {
     border-color: $medium-gray;
     border-radius: 6px;
@@ -147,4 +113,15 @@
       -webkit-appearance: none;
       margin: 0;
   }
+  .input-group-field {
+    padding-left: rem-calc(16);
+    max-width: rem-calc(46);
+    min-width: rem-calc(46);
+    width: rem-calc(46);
+    margin: 0 1rem;
+  }
+  .input-group-button {
+    width: auto;
+  }
+
 }
